# aixfutureapi

./: .gitignore  main.py  pyproject.toml  requirements.txt
.github/workflows/: sync-db-prod.yml  update-leaderboard.yml  update-models.yml
.trae/documents/: AI模型价格采集系统实施计划.md  API对接需求文档-问题回答与开发计划.md  API系统重构计划v0.2.md  leaderboard-api-plan.md  model-database-plan.md  three-environment-plan.md  v0.2优化计划.md
.trae/rules/: developrules.md  forbidden.md
api/: docs.html  main.py  models.json
api/data/leaderboard/: general_opensource.json  general_overall.json  index.json  multimodal_edit.json  multimodal_edit_1.json  multimodal_edit_3.json  multimodal_image_1.json  multimodal_t2v.json  (+4 more)
crawler/: aliyun.py  anthropic.py  baidu.py  base.py  domestic.py  google_gemini.py  mistral.py  openai.py  openrouter.py  run_all.py  run_leaderboard.py  seed_leaderboard.py  superclue.py  zhipu.py
data/leaderboard/: general_base.json  general_opensource.json  general_overall.json  general_reasoning.json  general_reasoning_task.json  multimodal_edit.json  multimodal_edit_1.json  multimodal_edit_2.json  multimodal_edit_3.json  multimodal_i2v.json  multimodal_image.json  multimodal_image_1.json  multimodal_image_2.json  multimodal_image_3.json  multimodal_image_4.json  multimodal_r2v.json  multimodal_tts.json
db/: init_db.py  repository.py  turso.py
docs/: 2026-04-26-layer1-quick-search.md  260427calculatorpro.md  260429modelsfactory.md  API对接需求文档.md  api需求.md  crawler_sources.md  model_object.yaml  providers.yaml  需求.md
scripts/: copy_db.py  sync_uat_to_prod.py  verify_prod_sync.py
