[project]
name = "ai-model-pricing-api"
version = "0.1.0"
description = "AI Model Pricing Collection and Comparison API"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0"
]
